# SentezOS

.github/workflows/: main.yml
desktop-environment/: hyprland.conf
installer/: sentez-install.sh
iso-build/: packages.x86_64  pacman.conf  profiledef.sh
iso-build/airootfs/root/: customize_airootfs.sh
sentez-cloud/: sync_daemon.py
sentez-neural-core/: Cargo.toml
sentez-neural-core/src/: ai_engine.rs  hyprland_ipc.rs  main.rs
sentez-panel/: CMakeLists.txt
sentez-panel/src/: Taskbar.cpp  Taskbar.h  WindowButton.cpp  WindowButton.h  main.cpp
sentez-store/: CMakeLists.txt
sentez-store/src/: StoreWindow.cpp  StoreWindow.h  SupabaseClient.cpp  SupabaseClient.h  main.cpp
sentez-updater/: sentez-updater.py
