[package]
name = "sentez-neural-core"
version = "0.1.0"
edition = "2021"
authors = ["SentezOS Architect"]
description = "SentezOS AI Powered Workspace & Semantic Engine"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
